# law-api-mcp-korea

./: AGENTS.md  LICENSE  README.md  law_openapi_mcp_evaluation.xml  pyproject.toml
reports/: live_contract_validation.json  live_contract_validation_after_fix.md
src/law_api_mcp_korea/: __init__.py  aliases.py  catalog.py  citations.py  cli.py  client.py  decisions.py  env.py  generated_tools.py  live_sweep.py  mcp_server.py  official_guides.py
src/law_api_mcp_korea/api_docs/: 3단_비교_목록_조회.md  3단_비교_본문_조회.md  README.md  __init__.py  catalog.json  catalog_index.json  manifest.csv  manifest.json  official_guides_snapshot.json  verification.json  verification_report.md  감사원_사전컨설팅_의견서_본문_조회.md  경찰청_법령해석_본문_조회.md  고용보험심사위원회_결정문_목록_조회.md  고용보험심사위원회_결정문_본문_조회.md  관련법령_조회.md  관세청_법령해석_목록_조회.md  관세청_법령해석_본문_조회.md  교육부_법령해석_목록_조회.md  교육부_법령해석_본문_조회.md  국가데이터처_법령해석_목록_조회.md  국가데이터처_법령해석_본문_조회.md  국가유산청_법령해석_목록_조회.md  국가유산청_법령해석_본문_조회.md  국민권익위원회_특별행정심판례_목록_조회.md  국방부_법령해석_본문_조회.md  국토교통부_법령해석_목록_조회.md  국토교통부_법령해석_본문_조회.md  금융위원회_결정문_목록_조회.md  (+118 more)
tests/: test_aliases.py  test_catalog.py  test_citations.py  test_client.py  test_decisions.py  test_e2e_cli.py  test_e2e_generated_cli.py  test_e2e_generated_mcp.py  test_e2e_live_sweep.py  test_e2e_mcp.py  test_generated_client.py  test_generated_tools.py  test_live_sweep.py  test_mcp_server_improvements.py  test_official_guides.py  test_sync_api_docs.py
tools/: apply_live_contract_doc_updates.py  audit_official_guides.py  sync_api_docs.py  sync_official_guides.py  sync_source_docs_from_official.py  validate_live_api_contracts.py
(+338 files in other folders)
